Force minimal required mill 0.12 and 1.x versions